# micro-elf

./: .gitignore  Cargo.toml  README.md
examples/: test.rs
src/: lib.rs  prelude.rs
src/common/: abi.rs  address.rs  arch.rs  bytes.rs  elftype.rs  filetype.rs  iterator.rs  macros.rs  mod.rs  ptype.rs  stype.rs  subslice.rs
src/elf/: mod.rs
src/elf/data/: mod.rs
src/elf/data/header/: abi.rs  arch.rs  filetype.rs  mod.rs
src/elf/data/program/: flags.rs  mod.rs  programtype.rs
src/elf/data/section/: id.rs  mod.rs  sectiontype.rs
src/elf/data/symbol/: bind.rs  mod.rs
src/fh/: desc.rs  flags.rs  mod.rs  target.rs
src/file/: flags.rs  header.rs
src/header/: fileheader.rs  mod.rs  programheader.rs  sectionheader.rs
src/ph/: mod.rs
src/program/: flags.rs
src/section/: flags.rs  mod.rs  stype.rs
src/sh/: flags.rs  mod.rs
src/sym/: flags.rs  mod.rs
src/symbol/: bind.rs
srcv2/common/: abi.rs  arch.rs
srcv2/file/: ftype.rs  mod.rs
srcv2/function/: mod.rs
srcv2/program/: header.rs  mod.rs  ptype.rs
srcv2/section/: header.rs
srcv2/symbol/: mod.rs  stype.rs
